try to fix weird scrollbar em rendering bug
not even sure if ems are the issue but i'll look into it later

--- a/view/styles/ui.styl
+++ b/view/styles/ui.styl
@@ -41,8 +41,8 @@ a
   cursor: text
 
 ::-webkit-scrollbar
-  width: 0.5em
-  height: 0.5em
+  width: 10px
+  height: @width
 
 ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner
   background-color: darken($theme-color-dark, 20%)
